# techoatom_cpp

./: .gitmodules  Doxyfile_cfg  README.md
Stack/: main.cpp
exercises/Array/: Array(bool).h  Array.h  Array.hpp  main.cpp
exercises/CPU/: CMakeLists.txt  Processor.h  Switcher.h  cmd_defines.h  cmd_defines.sv  debug_macros.h  main.cpp  unaryOperators.h
exercises/CPU/include/: BoolOperation.hpp
exercises/CPU/test/: StackTestLib.cpp
exercises/Fract/: main.cpp
exercises/Fract/include/: Fract.hpp
exercises/Fract/src/: Fract.cpp
exercises/InT/: func.txt  header.h  test.cpp
exercises/InT/inT/: inT.sln
exercises/Pointers/auto_ptr/: Auto_Pointer.h
exercises/Pointers/unique_ptr/: Unique_Pointer.h
exercises/Processor/: .gitignore  CMakeLists.txt  Processor.h  Switcher.h  binaryOperators.h  debug_macros.h  error_code_defines.h  main.cpp
exercises/Processor/include/: Processor.h  Switcher.h  arlog_cmds.cpp  binaryOperators.h  branch_cmds.h  cmd_defines.h  error_code_defines.h  jump_cmds.h  move_cmds.h  nop_cmds.h  operators.h  shift_cmds.h  unaryOperators.h
exercises/Processor1/: CMakeLists.txt  Processor.h  Switcher.h  binaryOperators.h  main.cpp
exercises/Shared_ptr/: Shared_Pointer.h
exercises/SmartException/: .gitignore  CMakeLists.txt  main.cpp
exercises/SmartException/include/: Root.h  SmartException.h
exercises/SmartException/src/: Root.cpp  SmartException.cpp
exercises/Stack/: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists1.txt  Stack.cpp  Stack.h  Stack.hpp  main.cpp  src.h
exercises/Stack (Array)/include/: Stack.h
exercises/Stack (Array)/test/: CMakeLists.txt  StackTest.cpp
exercises/Stack (DynArray)/: CMakeLists.txt  main.cpp
exercises/Stack (DynArray)/include/: Array.hpp  Stack.hpp
exercises/Stack (DynArray)/test/: StackTestLib.cpp
exercises/Stack (StatArray)/include/: Stack.hpp
exercises/Stack (StatArray)/src/: Stack.cpp
exercises/Stack (StatArray)/test/: StackTestSuite.cpp
exercises/Stack (Vector)/: .gitignore  CMakeLists.txt  main.cpp
exercises/Stack (Vector)/include/: BoolOperation.cpp  BoolOperation.h  BoolOperation.hpp  Stack.h  Stack.hpp  Vector(bool).h  Vector(bool).hpp  Vector.h  Vector.hpp
exercises/Stack (Vector)/src/: BoolOperation.cpp
exercises/Stack (Vector)/test/: StackTestLib.cpp
exercises/Stack (placement new)/: CMakeLists.txt
exercises/Stack (placement new)/include/: Stack.hpp
exercises/Stack (placement new)/test/: StackTestLib.cpp
exercises/Stack/include/: Array.hpp  (+1 more)
exercises/Stack_win/: CMakeLists.txt  main.cpp
exercises/Stack_win/include/: Stack.hpp
exercises/Stack_win/src/: Stack.cpp
exercises/Stack_win/test/: CMakeLists.txt  StackTestLib.cpp
exercises/Translator/: Translator.cpp
exercises/Vector/: .gitignore  BoolOperation.cpp  BoolOperation.hpp  CMakeLists.txt  Vector(bool).hpp  Vector.hpp  main.cpp
exercises/game/: main.cpp
exercises/wqd/: CMakeLists.txt
exercises/wqd/test/: CMakeLists.txt  main.cpp
(+90 files in other folders)
